--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,4 @@ phases:
       - npm run-script build
   post_build:
     commands:
-      - aws s3 cp build s3://devaws-web-app-react --recursive --acl public-read
+      - aws s3 cp build s3://bucketgitdireto --recursive --acl public-read
